--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "cbcs",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
+  "engines": {
+    "node": "8.9.3"
+  },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.3",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
