--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "datatables.net": "^1.10.16",
     "dns": "file:./src/dns",
     "express": "^4.16.3",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "json2xls": "^0.1.2",
+    "jspdf": "^1.3.5",
     "msnodesqlv8": "^0.4.14",
     "mssql": "^4.1.0",
     "react": "^16.2.0",
